--- a/WEB/css/style_create_account.css
+++ b/WEB/css/style_create_account.css
@@ -13,7 +13,7 @@ section{
 	background-size: cover;
 }
 
-.container{
+.container1{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -24,8 +24,8 @@ section{
 }
 
 
-.container .form_contain1,
-.container .form_contain2{
+.container1 .form_contain1,
+.container1 .form_contain2{
 	position: relative;
 	width: 50%;
 	height: 380px;
@@ -33,12 +33,12 @@ section{
 	box-sizing: border-box;
 }
 
-.container .form_contain2 h1{
+.container1 .form_contain2 h1{
 	font-size: 30px;
 	color: yellow;
 }
 
-.container .form_contain2{
+.container1 .form_contain2{
 	background: #FF1589;
 	height: 510px;
 	top: -30px;
@@ -46,7 +46,7 @@ section{
 	padding: 30px;
 }
 
-.container .form_contain2 label{
+.container1 .form_contain2 label{
 	color: white;
 }
 
@@ -86,7 +86,7 @@ section{
 	font-size: 30px;
 }
 
-.container .form_contain1 input[type="submit"]
+.container1 .form_contain1 input[type="submit"]
 {
 	background: #31A7FD;
 	color: white;
@@ -101,13 +101,13 @@ section{
 	font-size: 15px;
 }
 
-.container .form_contain1 input[type="submit"]:hover{
+.container1 .form_contain1 input[type="submit"]:hover{
 	background: #63DAFF;
 	
 }
 
 
-.container .form_contain1{
+.container1 .form_contain1{
 	padding: 40px 30px;
 	color: white;	
 }
