--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -53,7 +53,7 @@
 			box-sizing: border-box;
 		}
 		body{
-			font-family: arial,helvetica;
+			font-family: 'Arima Madurai', cursive;
 			color: #F2F2F2;
 		}
 		h1{
@@ -70,104 +70,22 @@
 			text-align: center;
 		}
 
-/* Style header */
-/*header
-{
-	color: white;
-	padding-top: 10px;
-	min-height: 100px;
-	border-bottom:#FF0004 0px solid;
-}
-
-header a
-{
-	color: purple;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-size: 16px;
-}
-
-header li
-{
-	float: left;
-	display: inline;
-	padding: 0px 20px 0px 20px;
-}
-
-header .logo
-{
-	font-weight: bold;
-}
-
-header #branding
-{
-	float: left;
-}
-
-header nav
-{
-	float: right;
-	margin-top: 20px;
-}
-
-header #branding h1
-{
-	margin: 0px;
-	background: url(../images/logo.png) no-repeat;
-	background-size: 200px auto;
-	color: white;
-	margin-left: 20px;
-	font-size: 50px;
-	min-width: 200px;
-	min-height: 60px;
-}
-
-header #branding h3
-{
-	margin-left: 20px;
-	color: white;
-	font-size: 20px;
-	font-family: "Consolas", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
-	font-style: italic;
-}
-
-header .heading h1{
-	font-size: 50%;
-	font-weight: bold;	
-}
-
-
-header .current a
-{
-	color: #FF0004;
-	font-weight: bold;	
-}
-
-header a:hover{
-	color: #cccccc;
-	font-weight: bold;
-}
-*/
-/*End style Header */
-
-
-
 		/* Section 1
 		 * --------------------------------------- */
 		#section0{
 			background-image:url(../Images/Home/background12.gif);
-			background-position: center;
 			background-size: cover;
+			background-position: right 50px;
 		}
 		#section0 h1{
 			color: #5197FF;
-			font-family: 'Gravitas One', cursive;
+			font-family: 'Arima Madurai', cursive;
 		
 		}
 
 		#section0 p{
 			color: #A8D4FF;
-			font-family: 'Pacifico', cursive;
+			font-family: 'Arima Madurai', cursive;
 			font-size: 2em;
 		}
 
@@ -175,7 +93,7 @@ header a:hover{
 			width: 100% ;
 			height: fit-content;
 			position: absolute;
-			top:102%;
+			margin-top: 7%;
 			left: 36%;
 			animation-delay: 0.1s;
 			opacity: 1;
@@ -240,7 +158,7 @@ header a:hover{
 		.login-input{
 			border: #0693cd 1px solid;
 			box-shadow: #5197FF 2px;
-			font-family:'Roboto', sans-serif;
+			font-family: 'Arima Madurai', cursive;
 			display: block;
 			width: 100%;
 			padding: 10px;
@@ -248,7 +166,7 @@ header a:hover{
 		}
 
 		.login-button{
-			background-color: #19EF08;
+			background-color:  #19EF08;
 			background-size: contain;
 			width: 100%;
 			border-radius: 25px;
@@ -262,29 +180,109 @@ header a:hover{
 			text-shadow: 0 0 2em rgba(255,255,255,1);
 			color:#FFFFFF;
 			border-color:#FFFFFF;
+			background: #5dff50;
 		}
-		.login-button:active{
-			border: rgb(25, 208, 228) 2px inset;			
-			text-shadow: 0 0 2em rgb(25, 208, 228);
-			color:rgb(25, 208, 228);
-		}
+
 
 .login-form a{
 	text-decoration: none;
 	margin-bottom: 1em;
 	color: white;
 }
+	.forgot-password a:hover{
+		color: aqua;
+	}
 
 		.create-account{
-			background: #FF0004;
+			background: #ff8c05;
 			width: 100%;
 			border-radius: 25px;
 			padding: 10px;
 		}
+
+		.create-account:hover{
+			background: #fba035;
+		}
+
 		.create-account a{
 			color: white;
 			font-weight: bolder;
 		}
+
+
+
+
+/* Respondsive section 1 */
+			/*Ipad ngang(1024 x 768)*/
+			@media screen and (max-width: 1024px){
+				#section0{
+					background-position: center;
+				}
+			}
+
+			/*Ipad ngang(1024 x 768)*/
+			@media screen and (max-width: 960px){
+				.login-box{			
+					margin-top: 10%;
+					left: 25%;
+				}
+			}
+
+			/*Ipad dá»c(768 x 1024)*/
+			@media screen and (max-width: 768px){
+				.login-box{			
+					margin-top: 15%;
+					left: 20%;
+				}
+					.login-form{
+					width: 350px;
+					padding: 13px;
+					}
+			}
+			/*Tablet nhá»(480 x 640)*/
+			@media screen and (max-width: 480px){
+				.login-box{			
+					margin-top: 20%;
+					left: 10%;
+				}
+					.login-form{
+					width: 300px;
+					padding: 13px;
+					}
+				
+			}
+
+				/*Tablet nhá»(480 x 640)*/
+			@media screen and (max-width: 400px){
+					.login-box{			
+					left: 10%;
+					margin-top: 30%;
+					}
+					.login-form{
+					width: 260px;
+					padding: 13px;
+					}
+				
+			}
+
+			/*Iphone(320 x 640)*/
+			@media screen and (max-width: 320px){
+					.login-box{			
+					left: 5%;
+					margin-top: 40%;
+					}
+					.login-form{
+					width: 250px;
+					padding: 13px;
+					
+					}
+					
+			}
+
+
+
+
+
 		/* Section 2
 		 * --------------------------------------- */
 		/*slide 1*/
@@ -296,7 +294,7 @@ header a:hover{
 		}
 
 		#section1 #slide1 p{
-			font-family: 'Lora', serif;
+			font-family: 'Arima Madurai', cursive;
 			text-align: left;
 			margin-left: 80px;
 			margin-top: 2%;
@@ -692,7 +690,7 @@ body{
 
 .container1 .form_contain2{
 	background: #FF1589;
-	height: 530px;
+	height: 610px;
 	top: -50px;
 	box-shadow: -20px 0px 15px rgba(0,0,0,.5);
 	padding: 30px;
