--- a/WEB/css/style_forget_password.css
+++ b/WEB/css/style_forget_password.css
@@ -1,15 +1,16 @@
 /* CSS Document */
 *{
 	font-family: 'Cormorant Infant', serif;
+	background-position: center;
 }
 
 
 #forget-password{
 	width: 30%;
-	height: 30em;
+	height: 36em;
 	margin: auto;
 	background: rgba(255,56,217,0.80);
-	margin-top: 2%;
+	margin-top: 6%;
 }
 
 #forget-password h1{
@@ -67,7 +68,8 @@
  /* Extra small devices (phones, 450px and down)*/ 
 @media only screen and (max-width: 450px){
 	#forget-password{
-		min-width: 15em;	
+		min-width: 15em;
+		top: 10em;	
 		}
 	
 
@@ -83,7 +85,7 @@
 @media only screen and (max-width: 600px){
 	#forget-password{
 		min-width: 17em;
-		margin-top: 3.5em;		
+		top: 8em;		
 		}
 	
 	#forget-password #form-forget-password input{
@@ -104,7 +106,7 @@
 @media only screen and (max-width: 800px){
 	#forget-password{
 		width: 50%;
-		margin-top: 3em;		
+		margin-top: 8em;		
 		}
 	
 	#forget-password #form-forget-password input{
@@ -129,18 +131,25 @@
 	
 }
 
+
+
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 1100px) {
 	#forget-password{
 	width: 35%;
 		}
-	
+		#forget-password{
+			margin-top: 8em;		
+			}
 
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 	/*None effect */
+	#forget-password{
+		margin-top: 8em;		
+		}
 } 
 
 
