Cập nhật header, trang giới thiệu, trang tạo tài khoản
-Thêm dropdown menu Thông báo nếu người dùng đã đăng nhập
-Thêm trang Giới thiệu
-Bổ sung email vào trang tạo tài khoản

--- a/WEB/css/style_forget_password.css
+++ b/WEB/css/style_forget_password.css
@@ -2,6 +2,13 @@
 *{
 	font-family: 'Cormorant Infant', serif;
 	background-position: center;
+	
+}
+
+body{
+	background: url(../Images/logon/do-you-love-me_personalityhacker.jpg);
+	background-position: center;
+	background-size: cover;
 }
 
 
