--- a/WEB/css/style-danh-muc.css
+++ b/WEB/css/style-danh-muc.css
@@ -25,8 +25,6 @@ body{
 	
 }
 
-
-
 .accordion .card .collapse .list-group-item a{
 	text-decoration: none;
 	color: white;
@@ -47,9 +45,43 @@ body{
 	background: #FF2892;
 }
 
+/* Nhan new, hot, discount */
+.corner-ribbon{
+	width: 100px;
+	background: #e43;
+	position: absolute;
+	top: 15px;
+	right: -25px;
+	text-align: center;
+	line-height: 20px;
+	letter-spacing: 1px;
+	color: #f0f0f0;
+	left: auto;
+  	transform: rotate(45deg);
+  	-webkit-transform: rotate(45deg);
+
+}
+.corner-ribbon.shadow{
+	box-shadow: 0 0 3px rgba(0,0,0,.3);
+}
+.ribbon-new{
+	/* background:url(../Images/san-pham/new.png) no-repeat; */
+	background: green;
+	background-size: cover;
+}
+.ribbon-hot{
+	/* background:url(../Images/san-pham/hot.png) no-repeat; */
+	background: #e43;
+	background-size: cover;
+}
+.ribbon-discount{
+	/* background:url(../Images/san-pham/discount.png) no-repeat; */
+	background: blue;
+	background-size: cover;
+}
 
 .card .card-product{
-	overflow-x: auto;
+	overflow: hidden;
 	border-radius: 25px;
 }
 
@@ -79,6 +111,7 @@ body{
 .type-info{
 	color: #5100E7;
 }
+
 
 
 
