--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -683,9 +683,12 @@ body{
 /*
 	Device width 680px or lower
 */
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1500px){
 	.container1{
 		margin-top: 2.5em;
+	}
+	#footerpage{
+		margin-top: 40em;
 	}
 }
 
@@ -694,12 +697,12 @@ body{
 {
 	
 	section .container1{
-		height: 430px;
 		width: 80%;
 	}
 	
 	.container1{
 		width: 80%;
+		height: 530px;
 	}
 	
 	.container1 .form_contain1{
@@ -711,7 +714,9 @@ body{
 		margin-top: 10em;
 	}
 	
-	
+	#footerpage{
+		margin-top: 71em;
+	}
 }
 
 
@@ -734,6 +739,9 @@ body{
 	.container1{
 		top: 60%;
 	}
+	#footerpage{
+		margin-top: 72em;
+	}
 }
 
 
@@ -755,6 +763,11 @@ body{
 	.container1 input{
 		font-size: 12px;
 	}
+	
+	.container1 .form_contain1{
+		height: 520px;
+	}
+	
 	.container1 .form_contain2 input[type="submit"]
 	{
 		font-size: 12px;
@@ -765,7 +778,9 @@ body{
 		margin-top: 10em;
 		height: 610px;
 	}
-
+	#footerpage{
+		margin-top: 90em;
+	}
 }
 
 
