--- a/WEB/css/style_forget_password.css
+++ b/WEB/css/style_forget_password.css
@@ -1,23 +1,18 @@
 /* CSS Document */
-*{
-	font-family: 'Cormorant Infant', serif;
-	background-position: center;
-	
-}
 
 body{
-	background: url(../Images/logon/do-you-love-me_personalityhacker.jpg);
-	background-position: center;
-	background-size: cover;
+	background: url(../Images/logon/Love_Heart_on_Beach_HD_Photo_Background.jpg);
+	font-family: 'Cormorant Infant', serif;
 }
 
 
 #forget-password{
 	width: 30%;
-	height: 36em;
+	height: 40em;
 	margin: auto;
-	background: rgba(255,56,217,0.80);
+	background: rgba(255,22,210,0.59);
 	margin-top: 6%;
+	margin-bottom: 3em;
 }
 
 #forget-password h1{
@@ -57,6 +52,9 @@ body{
 	font-weight: bold;
 	margin: auto;
 	font-size: 17px;
+}
+#forget-password #form-forget-password input[type="submit"]{
+	border: none;
 }
 
 #forget-password #form-forget-password input[type="submit"]:hover{
