--- a/WEB/css/style-danh-muc.css
+++ b/WEB/css/style-danh-muc.css
@@ -1,5 +1,6 @@
 body{
 	background: rgba(223,219,219,1.00);
+	font-family: 'EB Garamond', serif;
 }
 
 .main-contain{
@@ -91,26 +92,62 @@ body{
 
 .card .card-text{
 	height: 40px;
+	font-size: 20px;
 	overflow-y: auto;
-	color: #FC38A6;
+	color: black;
 }
 
 .card-title{
-	color: #F800B1;
+	color: black;
 	font-weight: bolder;
 }
 
 .price{
-	color:#FB0046;
+	color:black;
 	font-weight: bold;
 }
 
 .user-name{
-	color: #9E00AD;
+	color: black;
 }
 .type-info{
-	color: #5100E7;
+	color: black;
 }
+
+
+/* Style The Dropdown Button */
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 
 
 
