--- a/WEB/css/style-product-detail.css
+++ b/WEB/css/style-product-detail.css
@@ -79,7 +79,7 @@ img {
   line-height: 1.5em; }
 
 .card-header{
-	background: #FE9D00;
+	background: #006CD0;
 	font-weight: bolder;
 	font-size: 24px;
 }
@@ -112,9 +112,17 @@ img {
 .description{
 	width: 100%;
 	margin-top: 10px;
-	background: #fecc00;
+	background: #1D6FFF;
 	border: none;
 	
+}
+
+.details a{
+	color: white;
+}
+
+.details a:hover{
+	color: #49FF00;
 }
 
 .detaildes{
