Revert "Merge branch 'master' of https://github.com/bdtren/DTTV.UIT.CNPMChuyenSau.BanDoNguoiYeuCu"
This reverts commit 987be956fd14efd2575e37dbb22359f280b18ded, reversing
changes made to 3a1e5154ef81fd9bf5ce8e0932d95f18d448df53.

--- a/WEB/css/style-product-detail.css
+++ b/WEB/css/style-product-detail.css
@@ -79,7 +79,7 @@ img {
   line-height: 1.5em; }
 
 .card-header{
-	background: #006CD0;
+	background: #FE9D00;
 	font-weight: bolder;
 	font-size: 24px;
 }
@@ -112,17 +112,9 @@ img {
 .description{
 	width: 100%;
 	margin-top: 10px;
-	background: #1D6FFF;
+	background: #fecc00;
 	border: none;
 	
-}
-
-.details a{
-	color: white;
-}
-
-.details a:hover{
-	color: #49FF00;
 }
 
 .detaildes{
