--- a/WEB/css/style-danh-muc.css
+++ b/WEB/css/style-danh-muc.css
@@ -1,6 +1,5 @@
 body{
 	background: rgba(223,219,219,1.00);
-	font-family: 'EB Garamond', serif;
 }
 
 .main-contain{
@@ -92,62 +91,26 @@ body{
 
 .card .card-text{
 	height: 40px;
-	font-size: 20px;
 	overflow-y: auto;
-	color: black;
+	color: #FC38A6;
 }
 
 .card-title{
-	color: black;
+	color: #F800B1;
 	font-weight: bolder;
 }
 
 .price{
-	color:black;
+	color:#FB0046;
 	font-weight: bold;
 }
 
 .user-name{
-	color: black;
+	color: #9E00AD;
 }
 .type-info{
-	color: black;
+	color: #5100E7;
 }
-
-
-/* Style The Dropdown Button */
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 
 
 
