Chỉnh sửa giao diện trang danh mục sản phẩm và footer

--- a/WEB/css/style.css
+++ b/WEB/css/style.css
@@ -528,8 +528,10 @@ section .section-title {
     margin-bottom: 50px;
     text-transform: uppercase;
 }
+
+/* Chân trang */
 #footer {
-    background: #1F99FD !important;
+    background: #494848 !important;
 }
 #footer h5{
 	padding-left: 10px;
@@ -593,233 +595,7 @@ section .section-title {
 }
 
 
-/* Các thiết kế dành cho trang tạo tài khoản create_account.html */
-body{
-	margin: 0px;
-	margin-top: 20px;
-	padding: 0px;
-	font-family: 'Lobster', cursive;
-	letter-spacing: 1px;
-	background: url(../Images/logon/Love_Heart_on_Beach_HD_Photo_Background.jpg);
-	background-size: cover;
-}
 
-
-.container1{
-	position: absolute;
-	top: 57%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 700px;
-	height: 490px;
-	background: rgba(25,245,0,0.90);
-}
-
-.container1 .form_contain1,
-.container1 .form_contain2{
-	position: relative;
-	width: 50%;
-	height: 380px;
-	float: left;
-	box-sizing: border-box;
-}
-
-.container1 .form_contain2 h1{
-	font-size: 30px;
-	color: yellow;
-}
-
-.container1 .form_contain2{
-	background: #FF1589;
-	height: 610px;
-	top: -50px;
-	box-shadow: -20px 0px 15px rgba(0,0,0,.5);
-	padding: 30px;
-}
-
-.container1 .form_contain2 label{
-	color: white;
-}
-
-.textinput{
-	display: block;
-	width: 100%;
-	padding: 5px;
-	border: 1px solid #FF0000;
-	margin-bottom: 10px;	
-	border-radius: 25px;
-	font-size: 15px;
-	box-shadow: 0 10px 10px rgba(0,0,0,.2);
-}
-
-.textinput:hover,
-.textinput:valid{
-	border: 1px solid #F8FF00;
-}
-
-.textTalk{
-	display: block;
-	width: 100%;
-	padding: 5px;
-	border: 1px solid #FF0000;
-	margin-bottom: 20px;	
-	border-radius: 25px;
-	font-size: 15px;
-	box-shadow: 0 10px 10px rgba(0,0,0,.2);
-	resize: none;
-}
-
-.textTalk:hover{
-	border: 1px solid #F8FF00;
-}
-
-.rd{
-	font-size: 30px;
-}
-
-.container1 .form_contain1{
-	padding: 40px 30px;
-	color: white;	
-}
-
-#dktk{
-	font-size: 1.6em;
-	color: white;
-	margin-bottom: 20px;
-}
-
-.container1 .form_contain2 input[type="submit"]
-{
-	background: #31A7FD;
-	color: white;
-	text-align: center;
-	border:none;
-	font-family: 'Lobster', cursive;
-	margin-top: 0;
-	width: 80%;
-	margin-left: 30px;	
-	padding: 10px;
-	border-radius: 25px;
-	font-size: 15px;
-}
-
-.container1 .form_contain2 input[type="submit"]:hover{
-	background: #63DAFF;
-	
-}
-
-
-/*** RESPONDSIVE ***/
-
-/*
-	Device width 680px or lower
-*/
-@media screen and (max-width: 1500px){
-	.container1{
-		margin-top: 2.5em;
-	}
-	#footerpage{
-		margin-top: 40em;
-	}
-}
-
-
-@media screen and (max-width: 680px)
-{
-	
-	section .container1{
-		width: 80%;
-	}
-	
-	.container1{
-		width: 80%;
-		height: 530px;
-	}
-	
-	.container1 .form_contain1{
-		width: 100%;
-	}
-	
-	.container1 .form_contain2{
-		width: 100%;
-		margin-top: 10em;
-	}
-	
-	#footerpage{
-		margin-top: 71em;
-	}
-}
-
-
-/*
-	Device width 500px or lower
-*/
-@media screen and (max-width: 500px)
-{
-	
-	
-	.container1 input{
-		font-size: 12px;
-	}
-
-	.container1{
-		width: 80%;
-		
-	}
-	
-	.container1{
-		top: 60%;
-	}
-	#footerpage{
-		margin-top: 72em;
-	}
-}
-
-
-
-/*
-	Device width 390px or lower
-*/
-@media screen and (max-width: 390px)
-{
-	body{		
-		font-size: 12px;
-	}
-		
-	.container1{
-		width: 80%;
-		top: 60%;
-	}
-	
-	.container1 input{
-		font-size: 12px;
-	}
-	
-	.container1 .form_contain1{
-		height: 520px;
-	}
-	
-	.container1 .form_contain2 input[type="submit"]
-	{
-		font-size: 12px;
-		margin-left: 20px;
-	}
-	
-	.container1 .form_contain2{
-		margin-top: 10em;
-		height: 610px;
-	}
-	#footerpage{
-		margin-top: 90em;
-	}
-}
-
-
-
-
-/******************
-Kết thúc phần dành cho create_account.html
-******************/
 
 
 
