--- a/WEB/css/style-danh-muc.css
+++ b/WEB/css/style-danh-muc.css
@@ -1,22 +1,22 @@
 body{
 	background: rgba(223,219,219,1.00);
-	font-family: 'EB Garamond', serif;
 }
 
 .main-contain{
 	margin-top: 5em;
+	font-family: 'Playfair Display', serif;
 }
 
 /* sidebar */
 .card  .card-header{
-	background: #FF8E00;
+	background: #636363;
 	color: white;
 	padding: 20px;
 	
 }
 
 .accordion .card .card-header{
-	background: #FC9C24;
+	background: #787878;
 	padding: 5px;
 }
 
@@ -32,11 +32,11 @@ body{
 }
 
 .accordion .card .collapse .list-group-item{
-	background: #FBAD06;
+	background: #A0A0A0;
 }
 
 .accordion .card .collapse .list-group-item:hover{
-	background:  #FCC34A;
+	background:  #D0D0D0;
 	color: white;
 }
 
@@ -114,12 +114,15 @@ body{
 	color: black;
 }
 
+.card-body ul li{
+	padding: 7px;
+}
 
 /* Style The Dropdown Button */
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
-    display: inline-block;
+	display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -135,7 +138,7 @@ body{
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 5px 5px;
     text-decoration: none;
     display: block;
 }
